@@ -5,8 +5,11 @@ import com.example.antboard.dto.request.board.BoardEditDto;
 import com.example.antboard.dto.response.BoardListResponse;
 import com.example.antboard.dto.response.board.BoardDetailResponseDto;
 import com.example.antboard.dto.response.board.BoardResponseDto;
+import com.example.antboard.dto.response.file.BoardDetailsFileResponseDto;
 import com.example.antboard.entity.Board;
+import com.example.antboard.entity.FileEntity;
 import com.example.antboard.repository.BoardRepository;
+import com.example.antboard.repository.FileRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -17,6 +20,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -24,23 +28,36 @@ import java.util.List;
 @Transactional(readOnly = true)
 public class BoardService {
     private final BoardRepository boardRepository;
+    private final FileRepository fileRepository;
     //게시글 페이징 리스트
     @Transactional
     public Page<BoardListResponse> getAllBoards(Pageable pageable) {
         Page<Board> boards = boardRepository.findAll(pageable);
-        List<BoardListResponse> list =boards.getContent().stream()
-                .map(BoardListResponse::from)
-                .toList();
+        List<BoardListResponse> list = boards.getContent().stream()
+                .map(board -> {
+                    List<String> imageBase64Data = fileRepository.findByBoard(board).stream()
+                            .map(FileEntity::getBase64Data)
+                            .collect(Collectors.toList());
+                    return new BoardListResponse(board, imageBase64Data); // 이미지 데이터 포함하여 생성
+                })
+                .collect(Collectors.toList());
         return new PageImpl<>(list,pageable, boards.getTotalElements());
     }
 
     //게시글 가져오기
-    @Transactional
     public BoardDetailResponseDto getBoard(Long boardId){
         Board board = boardRepository.findById(boardId)
-                .orElseThrow(() -> new EntityNotFoundException("게시글이 없습니다"+boardId));
-        return BoardDetailResponseDto.from(board);
+                .orElseThrow(() -> new EntityNotFoundException("게시글이 없습니다 " + boardId));
+        List<BoardDetailsFileResponseDto> files = fileRepository.findByBoard(board).stream()
+                .map(file -> BoardDetailsFileResponseDto.builder()
+                        .fileId(file.getId())
+                        .FileName(file.getFileName())
+                        .fileType(file.getFileType())
+                        .imageBase64Data(List.of(file.getBase64Data()).toString())
+                        .build()).collect(Collectors.toList());
+        return BoardDetailResponseDto.from(board, files);
     }
+
     // 게시글 등록
     @Transactional
     public BoardResponseDto save(BoardDto dto){
@@ -53,7 +70,14 @@ public class BoardService {
     public BoardDetailResponseDto update(Long boardId, BoardEditDto dto){
         Board board = boardRepository.findById(boardId).orElseThrow(() -> new IllegalArgumentException("해당게시글은 없습니다. id" + boardId));
         board.update(dto.getTitle(), board.getContent());
-        return BoardDetailResponseDto.from(board);
+        List<BoardDetailsFileResponseDto> files = fileRepository.findByBoard(board).stream()
+                .map(file -> BoardDetailsFileResponseDto.builder()
+                        .fileId(file.getId())
+                        .FileName(file.getFileName())
+                        .fileType(file.getFileType())
+                        .imageBase64Data(List.of(file.getBase64Data()).toString())
+                        .build()).collect(Collectors.toList());
+        return BoardDetailResponseDto.from(board,files);
     }
     // 게시글 삭제
     @Transactional
